feat: replace VLCJ with universal audio player, synced visualizer
- Remove VLC dependency (users no longer need VLC installed)
- Pure Java audio playback via mp3spi, JOrbis, JFlac
- Synced FFT visualizer (feeds audio data directly, no mic capture)
- Fix AudioProcessor thread leak
- RadioBrowserAPI: DNS server discovery, multi-server fallback, URL encoding
- Results sorted by popularity, broken stations filtered
- Double-click to play, codec labels in search results
- Update module-info.java and pom.xml for new dependencies